tests/lean/345.lean.expected.out
345.lean:1:12-1:13: error: failed to synthesize instance
  OfNat (Sort ?u) 1
345.lean:4:8-4:9: error: failed to synthesize instance
  OfNat (Sort ?u) 1
345.lean:6:19-6:20: error: failed to synthesize instance
  OfNat (Sort ?u) 1
